# py-url-shortening

./: README.md  __init__.py  main.py  pyproject.toml  schema.sql  url.py
static/: home.css  operations.css  style.css
templates/: create_short_url.html  delete_short_url.html  error.html  get_url_stats.html  home.html  retrieve_original_url.html  update_short_url.html  url_form.html
