[project]
name = "py-url-shortening"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "flask-bootstrap>=3.3.7.1",
    "flask-hot-reload>=0.3.0",
    "pyshorteners>=1.0.1",
    "ruff>=0.14.7",
    "uvicorn>=0.38.0",
]
